# ml

./: .gitignore  CMakeLists.txt  Walmart_Sales_clean.csv  Walmart_Sales_train.csv  Walmart_Sales_val.csv  cmake_build.sh  lin_reg.cpp  perc.cpp  svm.cpp
include/: Dataset.hpp  LinearRegression.hpp  Model.hpp  Perceptron.hpp  SupportVectorMachine.hpp
include/utils/: Dataset.hpp  ML_CLIOptions.hpp  ML_Utils.hpp
linear_regression/: CMakeLists.txt
src/: Dataset.cpp  LinearRegression.cpp  Perceptron.cpp  SupportVectorMachine.cpp  linear_regression.cpp
